--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=DynaPuff:wght@700&family=Inter&family=Roboto:wght@700;900&display=swap"
       rel="stylesheet"
     />
-    <title>Document</title>
+    <title>Calendário de Jogos Copa do Mundo 2022</title>
   </head>
   <body class="blue">
     <div id="app">
