changed root and removed body class

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     />
     <title>Calendário de Jogos Copa do Mundo 2022</title>
   </head>
-  <body class="green">
+  <body>
     <div id="app">
       <header>
         <img src="./Assets/header-logo.svg" alt="Imagem da logo da NLW Copa" />
